# catchfly

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  catchfly_prd.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: CNAME  index.md
docs/api/: discovery.md  extraction.md  normalization.md  ontology.md  pipeline.md  selection.md  types.md
docs/cookbook/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: discovery.md  extraction.md  field-selection.md  normalization.md  pipeline.md
docs/stylesheets/: catchfly.css
notebooks/: 01_quickstart.ipynb  02_rare_disease.ipynb  03_product_catalog.ipynb  04_custom_schema.ipynb  05_local_models.ipynb
scripts/: test_02_rare_disease.py  test_03_product_catalog.py  test_04_custom_schema.py  test_05_local_models.py  test_live.py  test_quickstart.py
src/catchfly/: __init__.py  _compat.py  _defaults.py  _parsing.py  _types.py  checkpoint.py  exceptions.py  loaders.py  pipeline.py
src/catchfly/demo/: __init__.py  case_reports.json  product_reviews.json  support_tickets.json
src/catchfly/discovery/: __init__.py  base.py  optimizer.py  refine.py  single_pass.py  three_stage.py
src/catchfly/extraction/: __init__.py  _provenance.py  _tokenize.py  base.py  chunking.py  chunking_chonkie.py  chunking_fixed.py  chunking_strategy.py  llm_direct.py
src/catchfly/normalization/: __init__.py  base.py  cascade.py  composite.py  dictionary.py  embedding_cluster.py  kllmeans.py  learned_cache.py  llm_canonical.py  ontology_mapping.py
src/catchfly/ontology/: __init__.py  csv_json.py  hpo.py  index.py  types.py
src/catchfly/providers/: __init__.py  embeddings.py  llm.py
src/catchfly/schema/: __init__.py  converters.py  registry.py
src/catchfly/selection/: __init__.py  base.py  llm.py  statistical.py
src/catchfly/telemetry/: __init__.py  tracker.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_cascade_normalization.py  test_checkpoint.py  test_chunking.py  test_chunking_chonkie.py  test_chunking_strategy.py  test_compat.py  test_compliance.py  test_composite_normalization.py  test_cost_estimate.py  test_demo.py  test_dictionary_normalization.py  test_embedding_client.py  test_embedding_cluster.py  test_exceptions.py  test_kllmeans.py  test_learned_cache.py  test_llm_canonical.py  test_llm_client.py  test_llm_direct.py  test_loaders.py  test_ontology_index.py  test_ontology_mapping.py  test_ontology_types.py  test_optimizer.py  test_parsing.py  test_pipeline.py  test_property_normalization.py  test_property_schema.py  test_provenance.py  test_refine.py  test_registry.py  test_schema_converters.py  test_single_pass.py  test_three_stage.py  test_tracker.py  test_types.py
