[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catchfly"
dynamic = ["version"]
description = "Catch the structured data."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Adrian Michalski", email = "adrian@silene.systems" },
]
keywords = [
    "schema-discovery",
    "structured-extraction",
    "normalization",
    "clustering",
    "llm",
    "nlp",
    "pydantic",
    "data-extraction",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
openai = ["openai>=1.50"]
instructor = ["instructor>=1.5"]
embeddings = ["sentence-transformers>=3.0"]
clustering = ["scikit-learn>=1.3", "numpy>=1.24", "umap-learn>=0.5"]
medical = ["pronto>=2.5", "numpy>=1.24"]
pdf = ["pymupdf>=1.24"]
docling = ["docling>=2.0"]
export = ["pandas>=2.0", "pyarrow>=15.0"]
chunking = ["chonkie>=1.0"]
semantic-chunking = ["chonkie[semantic]>=1.0"]
all = ["catchfly[openai,instructor,embeddings,clustering,medical,pdf,export,chunking]"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.8",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[project.urls]
Homepage = "https://github.com/silene-systems/catchfly"
Documentation = "https://catchfly.dev"
Repository = "https://github.com/silene-systems/catchfly"
Issues = "https://github.com/silene-systems/catchfly/issues"
Changelog = "https://github.com/silene-systems/catchfly/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/catchfly/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/catchfly"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "llm: tests requiring real LLM API calls (skipped by default)",
    "slow: slow-running tests (benchmarks, large datasets)",
]
